# cv_streamlit

./: .gitignore  =  Intro.py  README.md  main.py  pyproject.toml  pyptoject.toml
dbt/: dbt_project.yml
dbt/analyses/: create_doc.sql  explo.sql  explo1.sql
dbt/models/cv_streamlit/mart/: mart_city_snapshot.sql  mart_dpt.sql  mart_france.sql  mart_liste_ville.sql
dbt/models/cv_streamlit/staging/: sources.yml  staging_properties.yml  stg_streamlit_cv__dpt_regions_raw.sql  stg_streamlit_cv__foyers_fiscaux_raw.sql  stg_streamlit_cv__taux_interet_raw.sql  stg_streamlit_cv__transactions_raw.sql
dbt/models/streamlit_cv/mart/: mart_dpt_metro.sql  mart_dpt_overseas.sql  mart_france.sql
dbt/models/streamlit_cv/staging/: sources.yml  staging_properties.yml  stg_streamlit_cv__transactions_raw.sql
files/ppt_template/: CitySnapshot_template.pptx
pages/: 1_CV.py  2_Data_Visualization.py  3_City_snapshot.py  3_Real_Estate_Snapshot.py  4_Playing_with_API.py
