[tool.poetry]
# Package metadata
name = "Streamlit CV"
version = "0.1.0"
description = "Streamlit CV and Portfolio"
license = ""  # You can replace this with your chosen license

# Authors and maintainers (optional)
authors = ["Mehdi Bennis <bennismehdi91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"  # You can specify a compatible Python version range here -> ^ ça veut dire 'Au moins telle version'
pandas = "^2.2.2"
ipykernel = "^6.29.4"
black = "^24.4.2"
streamlit = "^1.40.1"
google-cloud-bigquery = "^3.27.0"
jupyter = "^1.1.1"
pandas-gbq = "^0.27.0"
plotly = "^6.0.0"
bigquery = "^0.0.45"
tqdm = "^4.67.1"
turfpy = "^0.0.8"
python-pptx = "^1.0.2"
folium = "^0.19.4"
streamlit-folium = "^0.24.0"
geopy = "^2.4.1"
matplotlib = "^3.10.0"
geopandas = "^1.0.1"
contextily = "^1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.builders.sdist"